Bug#33696 2008-01-21 pcrews no .result file - bug allows NULL columns in CSV tables